--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,25 +1,53 @@
     {% if site.footer_fixed %}
     <footer class="fixed-bottom">
       <div class="container mt-0">
-        &copy; Copyright {{ site.time | date: '%Y' }} {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}. {{ site.footer_text }}
+
+        <!-- &copy; Copyright {{ site.time | date: '%Y' }} {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}. {{ site.footer_text }}
         {%- if site.impressum_path -%}
         <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
         {%- endif -%}
         {%- if site.last_updated -%}
         Last updated: {{ "now" | date: '%B %d, %Y' }}.
-        {%- endif %}
+        {%- endif %} -->
+
+                  <!-- Social Icons -->
+                  <div class="navbar-brand social">
+                    {% include social.html %}
+                  </div>
+        
+        
       </div>
     </footer>
     {%- else -%}
     <footer class="sticky-bottom mt-5">
       <div class="container">
-        &copy; Copyright {{ site.time | date: '%Y' }} {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}. {{ site.footer_text }}
+        <!-- &copy; Copyright {{ site.time | date: '%Y' }} {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}. {{ site.footer_text }}
         {%- if site.impressum_path -%}
         <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
         {%- endif -%}
         {%- if site.last_updated -%}
         Last updated: {{ "now" | date: '%B %d, %Y' }}.
-        {%- endif %}
+        {%- endif %} -->
+
+
+      {%- if page.social %}
+          
+      <!-- Social -->
+      <div class="social">
+        <div class="contact-icons">
+        {% include social.html %}
+        </div>
+
+        <!-- <div class="contact-note">
+          {{ site.contact_note }}
+        </div> -->
+        
       </div>
+      {%- endif %}
+
+
     </footer>
     {%- endif %}
+
+
+
